--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 logging.level.org.springframework.security=DEBUG
+
+scheduler.rate=5000
+
+spring.security.secret=bgfnkj5n6w3
+spring.security.token_lifetime=30000
